// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TicketRequest component should be null if not development 1`] = `""`;

exports[`TicketRequest component should display empty dropdown 1`] = `
<div
  className="d-none d-md-inline-flex flex-wrap"
>
  <Dropdown
    active={false}
    addonType={false}
    direction="down"
    id="ticket-request"
    inNavbar={false}
    isOpen={false}
    nav={false}
    toggle={[Function]}
  >
    <DropdownToggle
      aria-haspopup={true}
      caret={true}
      className="headerButton btn-transparent"
      color="secondary"
      disabled={false}
      type="button"
    >
      <i
        aria-hidden="true"
        className="icon-custom icon-magic"
      />
    </DropdownToggle>
    <DropdownMenu
      flip={true}
      tag="div"
    >
      <DropdownItem
        header={true}
        tag="button"
        toggle={true}
      >
        TICKET REQUEST (BETA)
      </DropdownItem>
      <DropdownItem
        divider={true}
        tag="button"
        toggle={true}
      />
      <DropdownItem
        onClick={[Function]}
        tag="button"
        toggle={true}
      >
        Clear request
      </DropdownItem>
    </DropdownMenu>
  </Dropdown>
</div>
`;

exports[`TicketRequest component should display requests 1`] = `
<div
  className="d-none d-md-inline-flex flex-wrap"
>
  <Dropdown
    active={false}
    addonType={false}
    direction="down"
    id="ticket-request"
    inNavbar={false}
    isOpen={false}
    nav={false}
    toggle={[Function]}
  >
    <DropdownToggle
      aria-haspopup={true}
      caret={true}
      className="headerButton btn-transparent"
      color="secondary"
      disabled={false}
      type="button"
    >
      <i
        aria-hidden="true"
        className="icon-custom icon-magic"
      />
      some name
    </DropdownToggle>
    <DropdownMenu
      flip={true}
      tag="div"
    >
      <DropdownItem
        header={true}
        tag="button"
        toggle={true}
      >
        TICKET REQUEST (BETA)
      </DropdownItem>
      <DropdownItem
        key="123"
        onClick={[Function]}
        tag="button"
        toggle={true}
      >
        some name
      </DropdownItem>
      <DropdownItem
        key="234"
        onClick={[Function]}
        tag="button"
        toggle={true}
      >
        other name
      </DropdownItem>
      <DropdownItem
        divider={true}
        tag="button"
        toggle={true}
      />
      <DropdownItem
        onClick={[Function]}
        tag="button"
        toggle={true}
      >
        Clear request
      </DropdownItem>
    </DropdownMenu>
  </Dropdown>
</div>
`;
